--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,12 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #f8e47c;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+ 
 }
 
 
@@ -26,38 +22,6 @@ a:hover {
 
 
 
-header,
-footer {
-  background-color: coral;
-  display: block;
-  width: 100vw;
-  height: 10rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-main{
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.box{
-  box-sizing: border-box;
-  width: 45%;
-  height: 30%;
-  background-color: burlywood;
-  margin: 1rem;
-}
-
-.area{
-  box-sizing: border-box;
-  width: 100%;
-  height: 100vh;
-}
 
 
 body {
