--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -4,17 +4,23 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
-  width: 100%;
+  width: 100vw;
   box-shadow: 0 4px 8px rgba(54, 52, 52, 0.1); 
 }
 
 nav ul li {
+ 
   display: inline-block;
   padding: 0 1rem;
 }
 
+nav{
+  margin-right: 3rem;
+}
+
 a {
-  margin: 0 1rem;
+  margin: .5rem;
+
   text-decoration: none;
   color: rgb(12, 11, 11);
 }
@@ -25,6 +31,6 @@ a:hover {
 
 .active {
   color: rgb(255, 197, 90);
-  border-bottom: 1px dashed maroon);
+  border-bottom: 1px dashed maroon;
   font-weight: 600;
 }
