--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,6 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #f8e47c;
-
-
  
 }
 
@@ -27,7 +25,7 @@ a:hover {
 body {
   margin: 0;
 
- height: 100%;
+  height: 100vh;
   min-width: 320px;
   min-height: 100vh;
 }
