--- a/src/component/footer/Footer.module.css
+++ b/src/component/footer/Footer.module.css
@@ -1,25 +1,24 @@
-footer {
+.footer {
   background-color: hsl(0, 0%, 100%);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
-  width: 100vw;
-  height: 1rem;
+
+  height: 8rem;
   box-shadow: 0 4px 8px rgba(54, 52, 52, 0.1);
 }
 
-nav {
-  width: 1rem;
-  margin-right: 3rem;
-  display: flex;
-  flex-direction: column; /* Now menu items will be in a row (horizontally) */
+footer nav {
+display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
 }
 
-nav ul {
-  list-style: none; /* Remove bullet points */
-  display: flex;    /* Flexbox on ul to align li items horizontally */
+footer nav ul {
+  list-style: none;
+  display: flex; 
+  flex-direction: column;  
   padding: 0;
   margin: 0;
 }
