--- a/src/component/header/Header.module.css
+++ b/src/component/header/Header.module.css
@@ -1,25 +1,25 @@
-header {
+.header {
   background-color: hsl(0, 0%, 100%);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
-  width: 100vw;
-  box-shadow: 0 4px 8px rgba(54, 52, 52, 0.1); 
+
+  box-shadow: 0 4px 8px rgba(54, 52, 52, 0.1);
+  margin-bottom: 2rem;
 }
 
 nav ul li {
- 
   display: inline-block;
   padding: 0 1rem;
 }
 
-nav{
-  margin-right: 3rem;
+nav {
+  /* margin-right: 3rem; */
 }
 
 a {
-  margin: .5rem;
+  margin: 0.5rem;
 
   text-decoration: none;
   color: rgb(12, 11, 11);
