--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,13 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #f8e47c;
- 
+
 }
 
-
+main{
+  height: 100%;
+  min-height: 100vh;
+}
 
 a {
   font-weight: 500;
@@ -26,7 +29,7 @@ body {
   margin: 0;
 
   height: 100vh;
-  min-width: 320px;
+  min-width: 100vh;
   min-height: 100vh;
 }
 
