--- a/src/page/About.module.css
+++ b/src/page/About.module.css
@@ -5,6 +5,7 @@
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
     border-radius: 8px;
+    margin-top: 2rem;
   }
   
   .aboutContainer h1 {
