--- a/src/component/header/Header.module.css
+++ b/src/component/header/Header.module.css
@@ -1,6 +1,8 @@
 .header {
   background-color: hsl(0, 0%, 100%);
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 0 1rem;
 
   height: 8rem;
@@ -14,8 +16,8 @@
 
 header nav {
   display: flex;
-  justify-content: space-between;
-
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 header nav ul {
