--- a/src/component/header/Header.module.css
+++ b/src/component/header/Header.module.css
@@ -2,9 +2,7 @@
   background-color: hsl(0, 0%, 100%);
   display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 0 1rem;
-
   height: 8rem;
   box-shadow: 0 4px 8px rgba(54, 52, 52, 0.1);
 }
@@ -24,7 +22,7 @@ header nav {
 header nav ul {
   list-style: none;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 0;
   margin: 0;
 }
