--- a/src/component/header/Header.module.css
+++ b/src/component/header/Header.module.css
@@ -7,12 +7,17 @@
   box-shadow: 0 4px 8px rgba(54, 52, 52, 0.1);
 }
 
+.logoContainer{
+  display: flex;
+}
+
 .logo {
   width: 4rem;
   height: 4rem;
 }
 
 header nav {
+  margin-top: 2rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
