--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,16 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #f8e47c;
-
 }
 
-header{
+header {
   background-color: white;
   display: flex;
   justify-content: space-between;
+  height: 8rem;
 }
 
-main{
+main {
   height: 100%;
   min-height: 100vh;
 }
@@ -26,10 +26,6 @@ a {
 a:hover {
   color: #535bf2;
 }
-
-
-
-
 
 body {
   margin: 0;
