--- a/src/page/Addemployee.module.css
+++ b/src/page/Addemployee.module.css
@@ -9,6 +9,7 @@ body {
   align-items: center;
   min-height: 100vh;
   background-color: rgb(228, 228, 228);
+  margin: 1rem;
 }
 
 .inputContainer {
